@@ -1,6 +1,14 @@
 [8/25/2012]
 Version 0.6.8.1                             "Don hat"
 
+- Crashes and serious errors:
+
+  * Multi-arch update for the problem resolver:
+    - handle conflicts without removing all foreign-arch
+      packages (Closes: #672340) (LP: #831768)
+    - correctly recognise dependencies solved by Multi-Arch:
+      foreign packages (LP: #968412)
+
 [5/11/2012]
 Version 0.6.8                               "Never need a reason,
                                              never need a rhyme"
